# kopy-os

./: Cargo.toml  README.md
.cargo/: config.toml
crates/kopy_asm/: Cargo.toml
crates/kopy_asm/src/: add.S  add.s  asm.S  lib.rs
crates/kopy_core/: Cargo.toml
crates/kopy_core/src/: lib.rs  serial.rs  vga_buffer.rs
crates/kopy_events/: Cargo.toml
crates/kopy_events/src/: lib.rs
crates/kopy_events/src/events/: keyboard.rs
crates/kopy_keyboard/: Cargo.toml
crates/kopy_keyboard/src/: lib.rs
crates/ksh/: Cargo.toml
crates/ksh/src/: builtin.rs  lib.rs  repl.rs  shell.rs
src/: allocator.rs  colors.rs  gdt.rs  interrupts.rs  lib.rs  main.rs  memory.rs  serial.rs  vga_buffer.rs
tests/: basic_boot.rs  heap_allocation.rs  should_panic.rs  stack_overflow.rs  test_interrupts.rs  vga_output.rs
