[package]
name = "kopy_os"
version = "0.1.0"
authors = ["Matthew <staalkoper@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader = "0.9.11"
volatile = "0.2.6"
spin = "0.7.0"
x86_64 = "0.12.2"
uart_16550 = "0.2.10"
ksh = { path = "./crates/ksh"}

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[package.metadata.bootimage]
test-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio",
    "-display", "none",
]
test-success-exit-code = 33
test-timeout = 300

[[test]]
name = "stack_overflow"
harness = false