[package]
name = "kopy_keyboard"
version = "0.1.0"
authors = ["Matthew <staalkoper@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pc-keyboard = "0.5.0"
spin = "0.7.0"
x86_64 = "0.12.2"
kopy_core = {path = "./../kopy_core"}
ksh = {path = "./../ksh"}
lazy_static = "1.4.0"