[package]
name = "ksh"
version = "0.1.0"
authors = ["Matthew <staalkoper@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kopy_core = { path = "./../kopy_core" }
kopy_asm = { path = "./../kopy_asm" }
kopy_events = { path = "./../kopy_events" }
x86_64 = "0.12.2"
lazy_static = "1.4.0"